--- a/lib/plausible_web/templates/site/import_from_google.html.eex
+++ b/lib/plausible_web/templates/site/import_from_google.html.eex
@@ -1,27 +1,22 @@
-<%= form_for @conn, "/#{URI.encode_www_form(@site.domain)}/settings/google-import", [class: "max-w-md w-full mx-auto bg-white dark:bg-gray-800 shadow-md rounded px-8 pt-6 pb-8 mb-4 mt-8"], fn f -> %>
+<%= form_for @conn, Routes.site_path(@conn, :import_from_google_view_id, @site.domain), [class: "max-w-md w-full mx-auto bg-white dark:bg-gray-800 shadow-md rounded px-8 pt-6 pb-8 mb-4 mt-8"], fn f -> %>
   <h2 class="text-xl font-black dark:text-gray-100">Import from Google Analytics</h2>
+
+  <%= hidden_input(f, :access_token, value: @access_token) %>
 
   <%= case @view_ids do %>
     <% {:ok, view_ids} -> %>
 
       <div class="mt-6 text-sm text-gray-500">
-        You can choose the view ID that will be imported to the <%= @site.domain %> dashboard.
+        Choose the view in your Google Analytics account that will be imported to the <%= @site.domain %> dashboard.
       </div>
 
-      <div class="my-6">
-        <%= label f, :view_id, "Google Analytics view id", class: "block text-sm font-medium text-gray-700"  %>
-        <%= select f, :view_id, view_ids, prompt: "(Choose view id)", required: "true", class: "mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm rounded-md" %>
-      </div>
-
-      <div class="my-6">
-        <%= label f, :end_date, "Import end date", class: "block text-sm font-medium text-gray-700" %>
-        <div class="mt-1">
-          <%= date_input f, :end_date, value: Timex.today() |> Date.to_iso8601(), required: "true", class: "shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md" %>
-        </div>
+      <div class="mt-3">
+        <%= label f, :view_id, "Google Analytics view", class: "block text-sm font-medium text-gray-700"  %>
+        <%= select f, :view_id, view_ids, prompt: "(Choose view)", required: "true", class: "mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm rounded-md" %>
       </div>
     <% {:error, error} -> %>
       <p class="text-gray-700 dark:text-gray-300 mt-6">The following error occurred when fetching your Google Analytics view ids.</p>
       <p class="text-red-700 font-medium mt-3"><%= error %></p>
     <% end %>
-  <%= submit "Import", class: "button" %>
+    <%= submit "Continue ->", class: "button mt-6" %>
 <% end %>
