Fix dark mode for GA import

--- a/lib/plausible_web/templates/site/import_from_google_view_id_form.html.eex
+++ b/lib/plausible_web/templates/site/import_from_google_view_id_form.html.eex
@@ -6,13 +6,13 @@
   <%= case @view_ids do %>
     <% {:ok, view_ids} -> %>
 
-      <div class="mt-6 text-sm text-gray-500">
+      <div class="mt-6 text-sm text-gray-500 dark:text-gray-200">
         Choose the view in your Google Analytics account that will be imported to the <%= @site.domain %> dashboard.
       </div>
 
       <div class="mt-3">
-        <%= label f, :view_id, "Google Analytics view", class: "block text-sm font-medium text-gray-700"  %>
-        <%= select f, :view_id, view_ids, prompt: "(Choose view)", required: "true", class: "mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm rounded-md" %>
+        <%= styled_label(f, :view_id, "Google Analytics view") %>
+        <%= styled_select f, :view_id, view_ids, prompt: "(Choose view)", required: "true" %>
       </div>
     <% {:error, error} -> %>
       <p class="text-gray-700 dark:text-gray-300 mt-6">The following error occurred when fetching your Google Analytics view ids.</p>
