--- a/lib/plausible_web/templates/site/import_from_google_confirm.html.eex
+++ b/lib/plausible_web/templates/site/import_from_google_confirm.html.eex
@@ -6,27 +6,27 @@
   <%= case @start_date do %>
     <% {:ok, start_date} -> %>
 
-      <div class="mt-6 text-sm text-gray-500">
+      <div class="mt-6 text-sm text-gray-500 dark:text-gray-200">
         Choose the view in your Google Analytics account that will be imported to the <%= @site.domain %> dashboard
       </div>
 
       <div class="mt-3">
-        <%= label f, :view_id, "Google Analytics view", class: "block text-sm font-medium text-gray-700"  %>
-        <%= select f, :view_display, @view_ids, disabled: "true", selected: @selected_view_id, class: "bg-gray-50 mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm rounded-md" %>
+        <%= styled_label(f, :view_id, "Google Analytics view") %>
+        <%= styled_select f, :view_display, @view_ids, disabled: "true", selected: @selected_view_id %>
         <%= hidden_input f, :view_id, readonly: "true", value: @selected_view_id %>
       </div>
-      <div class="mt-6 text-sm text-gray-500">
+      <div class="mt-6 text-sm text-gray-500 dark:text-gray-200">
         Import historical data from your first Google Analytics visitor to your first Plausible visitor
       </div>
       <div class="flex justify-between mt-3">
         <div class="w-36">
-          <%= label f, :start_date, "From", class: "block text-sm font-medium text-gray-700"  %>
-          <%= date_input f, :start_date, value: start_date, readonly: "true", class: "bg-gray-50 mt-1 block w-full px-3 py-2 text-base border-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm rounded-md" %>
+          <%= styled_label f, :start_date, "From"  %>
+          <%= styled_date_input f, :start_date, value: start_date, readonly: "true" %>
         </div>
         <div class="align-middle pt-8">&rarr;</div>
         <div class="w-36">
-          <%= label f, :end_date, "To", class: "block text-sm font-medium text-gray-700"  %>
-          <%= date_input f, :end_date, value: @end_date, readonly: "true", class: "bg-gray-50 mt-1 block w-full px-3 py-2 text-base border-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm rounded-md" %>
+          <%= styled_label f, :end_date, "To"  %>
+          <%= styled_date_input f, :end_date, value: @end_date, readonly: "true" %>
         </div>
       </div>
     <% {:error, error} -> %>
