--- a/lib/plausible_web/templates/site/settings_general.html.eex
+++ b/lib/plausible_web/templates/site/settings_general.html.eex
@@ -47,6 +47,7 @@
   </div>
 <% end %>
 
+<%= if Application.get_env(:plausible, :environment) == "prod" && @conn.assigns[:current_user].id in Application.get_env(:plausible, :import_testers) do %>
 <div class="shadow bg-white dark:bg-gray-800 sm:rounded-md sm:overflow-hidden py-6 px-4 sm:p-6">
   <header class="relative">
     <h2 class="text-lg leading-6 font-medium text-gray-900 dark:text-gray-100">Data Import from Google Analytics</h2>
@@ -111,3 +112,4 @@
     </div>
   <% end %>
 </div>
+<% end %>
