--- a/lib/plausible_web/templates/site/import_from_google_confirm.html.eex
+++ b/lib/plausible_web/templates/site/import_from_google_confirm.html.eex
@@ -7,7 +7,7 @@
     <% {:ok, start_date} -> %>
 
       <div class="mt-6 text-sm text-gray-500 dark:text-gray-200">
-        Choose the view in your Google Analytics account that will be imported to the <%= @site.domain %> dashboard
+        Confirm the view and dates in your Google Analytics account to be imported to the Plausible dashboard
       </div>
 
       <div class="mt-3">
@@ -16,17 +16,19 @@
         <%= hidden_input f, :view_id, readonly: "true", value: @selected_view_id %>
       </div>
       <div class="mt-6 text-sm text-gray-500 dark:text-gray-200">
-        Import historical data from your first Google Analytics visitor to your first Plausible visitor
+        Historical data will be imported from your first Google Analytics visitor to your first Plausible visitor
       </div>
       <div class="flex justify-between mt-3">
         <div class="w-36">
           <%= styled_label f, :start_date, "From"  %>
-          <%= styled_date_input f, :start_date, value: start_date, readonly: "true" %>
+          <%= styled_text_input f, :start_date, value: PlausibleWeb.EmailView.date_format(start_date), readonly: "true" %>
+          <%= hidden_input f, :start_date, value: start_date, readonly: "true" %>
         </div>
         <div class="align-middle pt-8">&rarr;</div>
         <div class="w-36">
           <%= styled_label f, :end_date, "To"  %>
-          <%= styled_date_input f, :end_date, value: @end_date, readonly: "true" %>
+          <%= styled_text_input f, :end_date, value: PlausibleWeb.EmailView.date_format(@end_date), readonly: "true" %>
+          <%= hidden_input f, :end_date, value: @end_date, readonly: "true" %>
         </div>
       </div>
     <% {:error, error} -> %>
