Adds Main Graph Metric Selection (#1364)
* First pass bringing in previous graph improvements, and comparsion context

* Swaps issue template to new issue form syntax

* Indentation update

* Indentation update?

* More indentation

* Intendation is hard

* Finalized indentation?

* Github indentation

* Missing fields

* Formatting changes

* Checkbox changes

* Uses new timeseries API, various UI improvements, descopes conversions, ToP from graphing

* Fixes Mobile UI Issues

* Improves point detection and display on hover

* Fixes & adds tests for updated main-graph API route

* Changelog

* Changes to better metric option declaration & minor UI/default fixes

* Fixes top stat tooltips showing unformatted numbers for special (non-rounded) top stats

* Formatting

* Fixes regression with dashed portion not stopping at present_index

* Removes comparison + lint

* Improves top stat active style

* Removes comparison tests

* Splits out tooltip and top stats

Still needs:
- Tests
- Potentially more cleanup

* Adds/moves tests for top stats

* Formatting

* Updates metric LS key, removes console log

* Various fixes + cleanup

* Makes tooltip position & style more consistent

* Fixes test (returns import status on both main graph & top stats)

* Fixes interaction with month dateFormatter

* Fixes edge case tooltip behavior

It was simpler than I thought :/

* Make the entire top stat clickable

* Minor UI improvements

* Fixes another tooltip visibility edge case + cleans up boolean algebra

Co-authored-by: Uku Taht <Uku.taht@gmail.com>

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -32,6 +32,7 @@
 
 html {
   @apply text-gray-800;
+  overflow-x: hidden;
 }
 
 body {
@@ -70,9 +71,8 @@ blockquote {
 .main-graph {
   position: relative;
   height: 0;
-
-  /* Formula is: (top row height + (graph height / graph width * 100%)) */
-  padding-top: calc(168px + (451 / 1088 * 100%));
+  /* Formula is: (top row height + (graph height / graph width * 100%) - adjustment for stat selectors) */
+  padding-top: calc(168px + (451 / 1088 * 100%) - 20px);
 }
 
 @screen sm {
@@ -89,7 +89,31 @@ blockquote {
 
 @screen lg {
   .main-graph {
-    padding-top: calc(28px + (451 / 1088 * 100%));
+    padding-top: calc(28px + (451 / 1088 * 100%) - 10px);
+  }
+}
+
+.top-stats-only {
+  position: relative;
+  height: 0;
+  padding-top: calc(158px + 15px);
+}
+
+@screen sm {
+  .top-stats-only {
+    padding-top: calc(155px + 15px);
+  }
+}
+
+@screen md {
+  .top-stats-only {
+    padding-top: calc(168px + 15px);
+  }
+}
+
+@screen lg {
+  .top-stats-only {
+    padding-top: calc(75px + 15px);
   }
 }
 
@@ -311,6 +335,17 @@ iframe[hidden] {
     right: 0 !important;
     left: 0 !important;
   }
+}
+
+#chartjs-tooltip {
+  background-color: rgba(25, 30, 56);
+  position: absolute;
+  font-size: 14px;
+  font-style: normal;
+  padding: 10px 12px;
+  pointer-events: none;
+  border-radius: 5px;
+  z-index: 100;
 }
 
 .active-prop-heading {
