Adds "invite_only" disable_registration config option (#1841)
* Adds tri-state disable_registration config

* Formatting

* Changes variable back to atom

* Changelog

* Uses atoms correctly :/

* Swaps to a more fitting value

* Formatting

--- a/lib/plausible_web/templates/layout/_header.html.eex
+++ b/lib/plausible_web/templates/layout/_header.html.eex
@@ -54,7 +54,7 @@
                     </div>
                 </li>
               </ul>
-            <%  Keyword.fetch!(Application.get_env(:plausible, :selfhost), :disable_registration) -> %>
+            <%  Keyword.fetch!(Application.get_env(:plausible, :selfhost), :disable_registration) != false -> %>
               <ul class="flex" x-show="!document.cookie.includes('logged_in=true')">
                 <li>
                     <div class="inline-flex">
