--- a/lib/plausible_web/templates/auth/user_settings.html.eex
+++ b/lib/plausible_web/templates/auth/user_settings.html.eex
@@ -125,7 +125,7 @@
 </div>
 
 <%= case @invoices do %>
-  <% {:error, :no_subscription} -> %>
+  <% {:error, :no_invoices} -> %>
 
   <% {:error, :request_failed} -> %>
     <div class="max-w-2xl px-8 pt-6 pb-8 mx-auto mt-16 bg-white border-t-2 border-orange-200 rounded rounded-t-none shadow-md dark:bg-gray-800">
