--- a/lib/plausible_web/templates/site/settings_search_console.html.eex
+++ b/lib/plausible_web/templates/site/settings_search_console.html.eex
@@ -36,12 +36,24 @@
             <%= submit "Save", class: "button" %>
           <% end %>
         <% {:error, error} -> %>
-          <p class="text-gray-700 dark:text-gray-300 mt-6">The following error happened when fetching your Google Search Console domains.</p>
+          <p class="text-gray-700 dark:text-gray-300 mt-6">The following error happened when fetching your Google Search Console domains:</p>
 
-          <%= if error == "invalid_grant" do %>
-            <p class="text-red-700 font-medium mt-3"><a href="https://plausible.io/docs/google-search-console-integration#i-get-the-invalid-grant-error">Invalid Grant error returned from Google. <span class="text-indigo-500">See here on how to fix it.</a></p>
-          <% else %>
-            <p class="text-red-700 font-medium mt-3">Something went wrong</p>
+          <%= case error do %>
+            <% "invalid_grant" ->  %>
+              <p class="text-red-700 font-medium mt-3">
+                <a href="https://plausible.io/docs/google-search-console-integration#i-get-the-invalid-grant-error">
+                  Invalid Grant error returned from Google. <span class="text-indigo-500">See here on how to fix it</span>.
+                </a>
+              </p>
+            <% "google_auth_error" -> %>
+              <p class="text-red-700 font-medium mt-3">
+                Your Search Console account hasn't been connected successfully. Please unlink your Google account and try linking it again.
+              </p>
+
+            <% _ -> %>
+              <p class="text-red-700 font-medium mt-3">
+                Something went wrong, but looks temporary. If the problem persists, try re-linking your Google account.
+              </p>
           <% end %>
       <% end %>
     <% else %>
