small addition to spike_notification email

--- a/lib/plausible_web/templates/email/spike_notification.html.eex
+++ b/lib/plausible_web/templates/email/spike_notification.html.eex
@@ -12,3 +12,6 @@ There are currently <%= @current_visitors %> visitors on <%= link(@site.domain, 
 <br /><br />
 View dashboard: <%= link(@link, to: @link) %>
 <% end %>
+<br /><br />
+
+Congrats on the spike in traffic!
