Implement Funnels view on dashboard (#3066)
* Add Funnel react component

assets/js/dashboard/stats/behaviours/funnel.js - restored from:

98a76cbd Remove console.info calls
d94db99d Convert Funnel class component into a functional one
028036ad Review comments
3067a940 Stop doing maths in react
73407cc3 Fix error handling when local storage gets corrupted
e8c6fc52 Format numbers on funnel labels
c815709f Reorganize component responsibility
7a88fe44 Outline basic error handling
94caed7c Chart styling updates
4514608a Add percentages to funnel
d622c32d Add funnel picker

Co-authored-by: Uku Taht <uku.taht@gmail.com>

* Pass funnels list to react via data-funnels

* Implement Funnels react API

lib/plausible_web/controllers/api/stats_controller.ex - restored from:

f36ad234 Adjust to Plausible.Stats interface
9b532273 Test funnel stats controller
028036ad Review comments
bea3725f Remove IO.inspect
7a88fe44 Outline basic error handling
c8ae3eaf Move Funnels to StatsController and use base query
667cf222 Put private functions at the bottom

* Tweak funnel presentation

* Handle errors at the top

* Do not register DataLabels plugin globally

or else all the existing charts are affected

* Calculate drop-off percentage evaluating funnels

* Tweak dark mode + implement nicer tooltips

* Make currently selected funnel bold in the picker

* Count user_ids not session_ids when evaluating funnels

So if a visitor goes:

1. Start session
2. Complete funnel step 1
3. Inactive for 30 minutes
4. Complete funnel step 2

We would not be able to track this funnel completion because of the session timeout.
We like to o measure this as funnel completion even though the session expired in the middle.

cc @ukutaht

* Add extra properties to the funnels API

cc @ukutaht

* Improve tooltips so that step to data is rendered

* Change tooltip number formatting

* Remove debugging remnants

* Quick & dirty mobile view

* 

--- a/lib/plausible_web/templates/site/settings_funnels.html.heex
+++ b/lib/plausible_web/templates/site/settings_funnels.html.heex
@@ -4,6 +4,7 @@
     <p class="mt-1 text-sm leading-5 text-gray-500 dark:text-gray-200">
       Compose goals into funnels
     </p>
+
     <%= link(to: "https://plausible.io/docs/funnel-analysis", target: "_blank", rel: "noreferrer") do %>
       <svg
         class="w-6 h-6 absolute top-0 right-0 text-gray-400"
@@ -27,6 +28,15 @@
     label="Show funnels in the dashboard"
     conn={@conn}
   >
+    <PlausibleWeb.Components.Generic.notice>
+      Funnels is an upcoming premium feature that's free-to-use
+      during the private preview. Pricing will be announced soon. See
+      examples and learn more in <a
+        class="font-medium text-yellow underline hover:text-yellow-600"
+        href="https://plausible.io/docs/funnel-analysis"
+      >our docs</a>.
+    </PlausibleWeb.Components.Generic.notice>
+
     <%= live_render(@conn, PlausibleWeb.Live.FunnelSettings,
       session: %{"site_id" => @site.id, "domain" => @site.domain},
       router: PlausibleWeb.Router
